# Eathy-Ops

./: .env.example  .gitignore  CLAUDE.md  README.md  account-profile.yaml  config.yaml  pyproject.toml
.claude/skills/: eathy-patterns.md  eathy-publish.md
launchd/: com.eathy.mcp.plist  com.eathy.scheduler.plist
prompts/copywrite/: styles.yaml
prompts/filter/: default.yaml
prompts/image/: styles.yaml
schedules/: com.eathy.xhs.plist
scripts/: install.sh  uninstall.sh
src/eathy/: cli.py  config.py  models.py  pipeline.py  prompts.py  scheduler.py
src/eathy/collect/: __init__.py  aggregator.py  news.py  rss.py
src/eathy/copywrite/: __init__.py  minimax.py
src/eathy/filter/: __init__.py  selector.py
src/eathy/image/: __init__.py  doubao.py  imagen.py
src/eathy/providers/: __init__.py  base.py  claude.py  minimax.py  openai_compat.py
src/eathy/publish/: __init__.py  xhs.py
tests/: test_config.py  test_models.py
tests/test_collect/: test_aggregator.py  test_rss.py
tests/test_copywrite/: test_minimax.py
tests/test_filter/: test_selector.py
tests/test_image/: test_imagen.py
tests/test_publish/: test_xhs.py
